--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
         <p>You beat Thanos by matching your total score to his number and you lose the game if your total score goes over
             his.
         </p>
-        <p>The value of each stone is hidden from you until you click on it.</p>
+        <p>The value of each stone is hidden from you until you click on it and the values change every game.</p>
     </div>
 
     <div class="wins-losses">
-        <p>Wins: <span class="wins"></span></p>
-        <hr>
-        <p>Losses: <span class="losses"></span></p>
+        <br>
+        <p>Wins: <span class="wins">0</span></p>
+        <br><hr><br><br>
+        <p>Losses: <span class="losses">0</span></p>
     </div>
 
     <div class="stones">
